--- a/app/client/main.css
+++ b/app/client/main.css
@@ -193,3 +193,26 @@ input[type="range"]::-webkit-slider-thumb:active{
 .newProperty_input{
     color:black;
 }
+
+.systemInfo{
+  position:absolute;
+  right:0px;
+  top:10px;
+  width: 600px;
+  height:150px;
+  background: rgba(255, 255, 255, 0.6);
+  *transition: opacity 1s;
+  *opacity: 0;
+  border-radius: 5px;
+  transition: transform 1s;
+  transform: translateX(600px);
+  z-index:100000;
+  padding:50px;
+  overflow: scroll;
+}
+
+.systemInfo h2{
+
+  font-size: 30px;
+
+}
